--- a/src/styles.css
+++ b/src/styles.css
@@ -5,13 +5,31 @@
 }
 
 /* image carousel */
+
+.main-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* height: 50%; */
+    width: 100%;
+}
 .carousel-container {
     overflow: hidden;
-    width: 80%;
-    margin: auto;
+    width: 60%;
+    height: 60vh;
+    /* margin: auto; */
+    border-radius: 0.325rem;
 }
+
 
 .carousel {
     display: flex;
     transition: transform 0.5s ease-in-out;
+}
+
+.carousel img {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
 }
