--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,63 @@
     box-sizing: border-box;
 }
 
+.container {
+    /* display: flex; */
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+/* navbar */
+
+.nav-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #FAFAFA;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.logo-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1.2rem 0 1.2rem 0.625rem;
+}
+
+.nav-links-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1..2rem 0.625rem 0 0;
+}
+
+#navbar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style-type: none;
+    color: black;
+}
+
+#navbar li {
+    margin: 0.625rem;
+}
+
+.nav-a {
+    text-decoration: none;
+    color: black;
+}
+
+.nav-a:hover {
+    color: blue;
+    translate: transform 0.2s;
+}
+
+.nav-a:active {
+    transform: scale(1.2);
+}
+
 /* image carousel */
 
 .main-container {
