--- a/src/styles.css
+++ b/src/styles.css
@@ -19,13 +19,20 @@
     justify-content: space-between;
     background: #FAFAFA;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
 }
 
 .logo-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 1.2rem 0 1.2rem 0.625rem;
+    margin: 1.2rem 0 1.2rem 1.2rem;
+}
+
+.logo-container img {
+    height: 25px;
 }
 
 .nav-links-container {
@@ -61,23 +68,58 @@
     transform: scale(1.2);
 }
 
+/* Featured products */
+
+.featured-products-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.what-we-do-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.what-we-do-card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 1.2rem 1.5rem;
+    background-color: #FAFAFA;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.998);
+    border-radius: 2px;
+    padding: 0.625rem;
+}
+
+#free-shipping-span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: burlywood;
+    padding: 0.325rem;
+    font-weight: bolder;
+    color: rgb(244, 237, 227);
+}
+
 /* image carousel */
 
 .main-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* height: 50%; */
     width: 100%;
 }
 .carousel-container {
     overflow: hidden;
-    width: 60%;
-    height: 60vh;
-    /* margin: auto; */
-    border-radius: 0.325rem;
+    width: 100%;
+    height: 100vh;
+    max-width: 100%;
+    
 }
-
 
 .carousel {
     display: flex;
@@ -86,7 +128,9 @@
 
 .carousel img {
     max-width: 100%;
-    max-height: 100%;
     width: auto;
     height: auto;
+    max-height: 100%; /* Ensure the image doesn't exceed the container height */
+    object-fit: contain; /* Maintain the aspect ratio while fitting within the container */
 }
+
