--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Anta&family=Itim&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Anta, sans-serif;
 }
 
 .container {
@@ -60,7 +63,7 @@
 }
 
 .nav-a:hover {
-    color: blue;
+    color: rgb(254, 118, 64);
     translate: transform 0.2s;
 }
 
@@ -157,7 +160,13 @@
 }
 
 #featured-products-heading {
+    margin: 0.825rem 0 0.825rem 0;
+}
+
+#summer-collection {
     margin: 0.625rem 0 0.625rem 0;
+    color: #898888;
+    font-weight: bold;
 }
 
 /* product list */
@@ -168,6 +177,7 @@
     justify-content: center;
     flex-wrap: wrap;
     margin: 0.625rem 0 0.625rem 0;
+    max-width: 1000px;
    
 }
 
@@ -194,40 +204,101 @@
 }
 
 .product-price {
-    color: rgb(9, 136, 9);
+    color: rgb(63, 85, 155);
     font-weight: bold;
+    font-size: 0.825rem;
+    
 }
 
 .product:hover {
     transform: scale(1.1);
 }
 
-/* image carousel */
+.price-and-product-link {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+}
 
-.main-container {
+.price-and-product-link a{
+    text-decoration: none;
+    color: black;
+}
+
+.product-card-shopping-cart {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.product-cart {
+    color: rgb(254, 118, 64);
+}
+
+.product-cart:hover {
+    color: black;
+}
+
+.summer-sale-promotion {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
+    height: 125px;
+    margin: 0.625rem 0 0.625rem 0;
+    position: relative;
 }
-.carousel-container {
-    overflow: hidden;
+
+
+.summer-sale-promotion img {
     width: 100%;
-    height: 100vh;
-    max-width: 100%;
-    
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    margin: 0 auto;
 }
+
+
+
+.text-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgb(254, 118, 64); /* Adjust the text color as needed */
+  }
+
+  .text-overlay p {
+    margin: 0;
+    font-size: 18px; /* Adjust the font size as needed */
+    font-weight: bolder;
+  }
+
+
+/* image carousel */
 
 .carousel {
     display: flex;
+    align-items: center;
+    justify-content: center;
     transition: transform 0.5s ease-in-out;
+    height: 100vh;
+    margin-bottom: 1.5rem;
+    max-width: 100%;
+    overflow: hidden;
 }
 
 .carousel img {
-    max-width: 100%;
-    width: auto;
-    height: auto;
-    max-height: 100%; /* Ensure the image doesn't exceed the container height */
-    object-fit: contain; /* Maintain the aspect ratio while fitting within the container */
+    width: 100%;
+    height: auto; /* Allow the height to adjust proportionally */
+    object-fit: cover;
+    display: block;
+    margin: 0 auto;
 }
-
