--- a/src/styles.css
+++ b/src/styles.css
@@ -160,7 +160,8 @@
 }
 
 #featured-products-heading {
-    margin: 0.825rem 0 0.825rem 0;
+    font-size: 2.5rem;
+    margin: 1.25rem 0 0.825rem 0;
 }
 
 #summer-collection {
@@ -247,8 +248,8 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 125px;
-    margin: 0.625rem 0 0.625rem 0;
+    height: 175px;
+    margin: 1.8rem 0;
     position: relative;
 }
 
@@ -279,6 +280,15 @@
     margin: 0;
     font-size: 18px; /* Adjust the font size as needed */
     font-weight: bolder;
+  }
+
+  .background-shopping-cart:hover {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgb(88, 88, 87);
+    padding: 0.225rem;
+    border-radius: 50%;
   }
 
 
