shop layout and styling added plus about us layout and styling added

--- a/about/about.css
+++ b/about/about.css
@@ -71,219 +71,26 @@
     transform: scale(1.2);
 }
 
-/* Featured products */
-
-.featured-products-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.what-we-do-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.what-we-do-card {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin: 1.2rem 1.5rem;
-    background-color: #FAFAFA;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.998);
-    border-radius: 2px;
-    padding: 0.625rem;
-}
-
-#free-shipping-span {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: burlywood;
-    padding: 0.325rem;
-    font-weight: bolder;
-    color: rgb(244, 237, 227);
-}
-
-#online-order-span {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgb(13, 16, 174);
-    padding: 0.325rem;
-    font-weight: bolder;
-    color: rgb(192, 215, 236);
-    
-}
-
-#save-money-span {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgb(236, 78, 210);
-    color: #ffffff;
-    padding: 0.325rem;
-    font-weight: bolder;
-}
-
-#piggy-bank {
-    width: 103px;
-    height: 90px;
-}
-
-#promo-span {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgb(211, 15, 34);
-    color: #dccaca;
-    padding: 0.325rem;
-    font-weight: bolder;
-}
-
-#shopping-cart-img {
-    width: 103px;
-    height: 90px;
-}
-
-#support-span {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgb(69, 123, 223);
-    color: #f2eeee;
-    padding: 0.325rem;
-    font-weight: bolder;
-}
-
-#featured-products-heading {
-    font-size: 2.5rem;
-    margin: 1.25rem 0 0.825rem 0;
-}
-
-#summer-collection {
-    margin: 0.625rem 0 0.625rem 0;
-    color: #898888;
-    font-weight: bold;
-}
-
-/* product list */
-
-#product-list {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin: 0.625rem 0 0.625rem 0;
-    max-width: 1000px;
-}
-/* new arrivals */
-
-.new-arrivals-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-}
-
-#new-arrivals-list {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin: 0.625rem 0 0.625rem 0;
-    max-width: 1000px;
-}
-/* end of new arrivals */
-
-.product {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 10px;
-    text-align: center;
-    background: #FAFAFA;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.998);
-    margin: 0.825rem;
-    border-radius: 5px;
-    transition: transform 0.3s ease-in-out;
-    
-}
-
-.product img {
-    width: 175px;
-    max-width: 100%;
-    height: 175px;
-    border-radius: 5px;
-    margin: 0 0 0.325rem 0;
-}
-
-.product-price {
-    color: rgb(63, 85, 155);
-    font-weight: bold;
-    font-size: 0.825rem;
-    
-}
-
-.product:hover {
-    transform: scale(1.1);
-}
-
-.price-and-product-link {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-}
-
-.price-and-product-link a{
-    text-decoration: none;
-    color: black;
-}
-
-/* .price-and-product-link a:hover {
-    color: aquamarine;
-    transform: transform 0.2s ease-in-out;
-}
-
-.price-and-product-link a:active {
-    transform: scale(1.1);
-} */
-
-.product-card-shopping-cart {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-}
-
-.product-cart {
-    color: rgb(254, 118, 64);
-}
-
-.summer-sale-promotion {
+/* Learn more about us */
+.know-us-container {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 175px;
-    margin: 1.8rem 0;
+    height: 225px;
+    /* margin: 1.8rem 0; */
     position: relative;
+    margin: 0 0 1.5rem 0;
 }
 
-
-.summer-sale-promotion img {
+.know-us-container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     display: block;
     margin: 0 auto;
 }
+
 
 .text-overlay {
     position: absolute;
@@ -294,56 +101,83 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: rgb(254, 118, 64); /* Adjust the text color as needed */
-  }
+    color: rgb(238, 255, 0);
+}
 
-  .text-overlay p {
+
+#know-us-text {
+
     margin: 0;
-    font-size: 18px; /* Adjust the font size as needed */
+    font-size: 2.25rem; /* Adjust the font size as needed */
     font-weight: bolder;
-  }
+    text-align: center;
 
-  .background-shopping-cart:hover {
+}
+
+#about-us-section {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgb(0, 0, 0);
-    padding: 0.225rem;
-    border-radius: 50%;
-  }
+    margin: 1.5rem 0.625rem;
+}
 
-
-/* image carousel */
-
-.carousel {
+.about-us-img {
     display: flex;
     align-items: center;
-    /* transition: transform 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94); */
-    height: 100vh;
-    margin-bottom: 1.5rem;
-    width: 100%;
-    overflow: hidden;
+    justify-content: center;
+    width: 50%;
 }
 
-.carousel img {
-    width: 100%;
+.about-us-img img {
+    width: 75%;
+    max-width: 100%;
     height: 100%;
-    object-fit: cover;
-    transition: transform 2.5s ease-in-out;
+    max-height: 100%;
+    border-radius: 2px;
 }
 
-    
-
-
-#new-arrivals-heading {
-    font-size: 2.5rem;
-    margin: 1.25rem 0 0.825rem 0;
+.about-us-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 50%;
 }
 
-#new-arrivals-p {
-    margin: 0.625rem 0 0.625rem 0;
-    color: #898888;
+.about-us-text h5 {
     font-weight: bold;
+    font-size: 2.25rem;
+    margin: 0.625rem 0;
+}
+
+.about-us-text p {
+    color: #898888;
+    margin: 0.625rem 0;
+}
+
+/* our team */
+
+#our-team-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1.5rem 0.625rem;
+}
+
+.our-team-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+}
+
+.our-team-img img{
+    width: 75%;
+    max-width: 100%;
+    height: 100%;
+    max-height: 100%;
+    border-radius: 2px;
+    /* border: 1px solid black; */
 }
 
 /* newsletter styling */
