--- a/public/product.css
+++ b/public/product.css
@@ -85,7 +85,14 @@
     align-items: center;
     justify-content: center;
     width: 50%;
-    border: 2px solid black;
+    /* border: 2px solid black; */
+    margin: 1.2rem;
+    padding: 1.5rem;
+ }
+
+ .img-layout img {
+    border-radius: 5px;
+    width: 50vh;
  }
 
  .text-layout {
@@ -94,18 +101,18 @@
     justify-content: center;
     flex-direction: column;
     width: 50%;
-    margin: 1.2rem 0 1.2rem 0;
+    margin: 1.2rem 1.8rem 1.2rem 0;
     text-align: center;
  }
 
  .text-layout h5 {
     font-size: 2.5rem;
-    margin: 0.325rem 0;
+    margin: 0.825rem 0;
  }
 
  .text-layout h6 {
     font-size: 1.5rem;
-    margin: 0.325rem 0;
+    margin: 0.825rem 0;
  }
 
  .text-layout form {
@@ -136,4 +143,30 @@
     font-size: 1.2rem;
     margin: 0.325rem 0;
     color: #898888;
+ }
+
+ #size-label {
+    font-size: 1.5rem;
+    margin: 0.825rem 0;
+ }
+
+ #dropdown {
+    margin: 0.625rem 0;
+ }
+
+ #add-to-cart-btn {
+    padding: 0.325rem;
+    color: #FAFAFA;
+    background: rgb(254, 118, 64);
+    border-radius: 5px;
+    border: rgb(254, 118, 64);
+    transition: transform 0.1s ease-in-out;
+ }
+
+ #add-to-cart-btn:hover {
+    transform: scale(1.1);
+ }
+
+ #add-to-cart-btn:active {
+    transform: scale(0.8);
  }
