--- a/checkout/checkout.css
+++ b/checkout/checkout.css
@@ -70,3 +70,59 @@
 .nav-a:active {
     transform: scale(1.2);
 }
+
+/* products */
+
+#checkout-container {
+    width: 100%;
+    margin: 1.2rem 0.125rem;
+}
+
+.product-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 15px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
+}
+
+.product-item img {
+    width: 80px; /* Adjust the width as needed */
+    height: auto;
+    border-radius: 6px;
+    margin-right: 15px; /* Adjust the margin as needed */
+}
+
+.product-details {
+    flex-grow: 1;
+}
+
+.product-details p {
+    margin: 5px 0;
+    font-size: 16px;
+}
+
+/* Add a grey line between each product */
+.product-item {
+    border-bottom: 1px solid #ccc;
+}
+
+.delete-icon {
+    background: red;
+    color: white;
+    padding: 0.325rem;
+    border-radius: 5px;
+    border: none;
+    transition: transform 0.3s ease-in-out;
+}
+
+.delete-icon:hover {
+    transform: scale(1.1);
+}
+
+.delete-icon:active {
+    transform: scale(0.8);
+}
