--- a/checkout/checkout.css
+++ b/checkout/checkout.css
@@ -126,3 +126,211 @@
 .delete-icon:active {
     transform: scale(0.8);
 }
+
+.cart-badge {
+    background-color: red; /* Set your desired background color */
+    color: white; /* Set the text color to contrast with the background */
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 12px;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+
+/* newsletter */
+
+.middle-footer-subscribe-newsletter-container {
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    /* border: 2px solid black; */
+    width: 100%;
+    height: 125px;
+    background: rgb(63, 85, 155);
+    margin: 1.5rem 0 1.5rem 0;
+}
+
+.form-layout-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: rgb(254, 118, 64);
+}
+
+.form-layout-text h4 {
+    font-size: 1.5rem;
+    margin: 0 0 0.325rem 0;
+}
+
+.form-layout {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 50%;
+}
+
+/* newsletter */
+
+#newsletter-form {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+#newsletter-form input {
+    height: 2.188rem;
+    width: 50%;
+    padding: 1rem;
+    border: none;
+
+}
+
+#newsletter-form input::placeholder {
+    color: black;
+}
+
+#newsletter-form button {
+    height: 2.188rem;
+    width: 20%;
+    margin: 0 0 0 0.325rem;
+    background: rgb(254, 118, 64);
+    border: none;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: transform 0.3s ease-in-out;
+}
+
+#newsletter-form button:active {
+    transform: scale(1.1);
+}
+
+#newsletter-form button:hover {
+    transform: scale(1.1);
+}
+
+/* footer styling */
+
+.footer {
+    width: 100%;
+    /* border: 2px solid black; */
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row-reverse;
+    margin: 0 0 0.235rem 0;
+}
+
+.left-hand-side-footer {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.left-hand-side-footer h5 {
+    font-size: 1.2rem;
+    margin: 0.325rem 0 0.325rem 0;
+}
+
+.left-hand-side-footer ul {
+    list-style-type: none;
+}
+
+.left-hand-side-footer a {
+    text-decoration: none;
+}
+
+.footer-links ul li a {
+    text-decoration: none;
+    color: black;
+}
+
+.footer-links ul {
+    text-align: center;
+}
+
+.footer-links li {
+    margin: 0.125rem 0 0.125rem 0;
+}
+
+.footer-links li a:hover {
+    color: rgb(254, 118, 64);
+}
+
+.middle-footer {
+    /* border: 1px solid red; */
+    height: 100%;
+}
+
+.middle-footer h5 {
+    font-size: 1.2rem;
+    margin: 0.325rem 0 0.325rem 0;
+}
+
+.middle-footer li {
+    list-style-type: none;
+}
+
+.middle-footer li a {
+    text-decoration: none;
+    color: black;
+}
+
+.social-icons {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.social-icons a {
+    text-decoration: none;
+}
+
+.facebook {
+    color: blue;
+}
+
+.insta {
+    color: rgb(211, 13, 128);
+}
+
+.twitter {
+    color: black;
+}
+
+.snapchat {
+    color: rgb(180, 180, 4);
+}
+/* .right-hand-side-footer {
+    border: 1px solid purple;
+} */
+
+.company-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.company-info h5 {
+    font-size: 1.2rem;
+    margin: 0.325rem 0 0.325rem 0;
+}
+
+.company-info p {
+    margin: 0.125rem 0 0.125rem 0;
+    color: #898888;
+}
+
+.company-span {
+    font-weight: bolder;
+    color: black;
+}
