--- a/src/styles.css
+++ b/src/styles.css
@@ -540,3 +540,60 @@
     color: black;
 }
 
+
+@media (max-width: 768px) {
+
+    .what-we-do-container {
+        flex-wrap: wrap;
+    }
+
+    .middle-footer-subscribe-newsletter-container {
+        flex-wrap: wrap;
+        height: 150px;
+    }
+
+    .form-layout {
+        width: 75%;
+    }
+
+    .text-overlay h3 {
+        text-align: center;
+    }
+
+    .footer {
+        flex-direction: column-reverse;
+    }
+
+    .spacing-footer {
+        margin: .35rem 0;
+    }
+
+}
+
+@media (max-width: 430px) {
+    .middle-footer-subscribe-newsletter-container {
+        text-align: center;
+    }
+
+    .form-layout {
+        height: 0;
+    }
+
+    #product-list {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: .65rem;
+        justify-items: center;
+        max-width: 430px;
+    }
+
+    #new-arrivals-list {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: .65rem;
+        justify-items: center;
+        max-width: 430px;
+    }
+}
+
+
