--- a/contact/contact.css
+++ b/contact/contact.css
@@ -311,3 +311,43 @@
     font-weight: bolder;
     color: black;
 }
+
+
+@media (max-width: 768px) {
+
+    .what-we-do-container {
+        flex-wrap: wrap;
+    }
+
+    .middle-footer-subscribe-newsletter-container {
+        flex-wrap: wrap;
+        height: 150px;
+    }
+
+    .form-layout {
+        width: 75%;
+    }
+
+    .text-overlay h3 {
+        text-align: center;
+    }
+
+    .footer {
+        flex-direction: column-reverse;
+    }
+
+    .spacing-footer {
+        margin: .35rem 0;
+    }
+
+}
+
+@media (max-width: 430px) {
+    .middle-footer-subscribe-newsletter-container {
+        text-align: center;
+    }
+
+    .form-layout {
+        height: 0;
+    }
+}
