--- a/public/product.css
+++ b/public/product.css
@@ -170,3 +170,9 @@
  #add-to-cart-btn:active {
     transform: scale(0.8);
  }
+
+ @media (max-width: 768px) {
+   .product-layout-container {
+      flex-direction: column;
+   }
+ }
